--- a/_site.yml
+++ b/_site.yml
@@ -5,8 +5,10 @@ navbar:
   right:
     - text: "About"
       href: about.html
+    - text: "Projects"
+      href: projects.html
     - icon: fa-envelope fa-lg
-      href: mailto:<you@youremail.com>
+      href: mailto:<gf2375@cumc.columbia.edu>
     - icon: fa-github fa-lg
       href: http://github.com/<YOUR_GH_NAME>/
 output:
