--- a/_site.yml
+++ b/_site.yml
@@ -8,9 +8,9 @@ navbar:
       href: about.html
     - text: "Projects and Publications"
       href: projects.html
-    - text: "Biobank Inquiries"
+    - text: "Biobank"
       href: biobank.html
-    - text: "Research Training Program"
+    - text: "Research Training"
       href: program.html
     - icon: fa-user-md fa-lg
       href: https://columbiasurgery.org/heart/
