--- a/_site.yml
+++ b/_site.yml
@@ -18,5 +18,5 @@ navbar:
       href: mailto:<gf2375@cumc.columbia.edu>
 output:
   html_document:
-    theme: journal
+    theme: cosmo
     code_folding: hide
